<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <ImageButton
            android:id="@+id/bSoundOffOn"
            android:background="@android:color/transparent"
            style="@style/bSettingStyle"
            android:contentDescription="@string/buttonSound"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/marginBotton"
        android:layout_above="@+id/layoutButtons">

        <TextView
            android:id="@+id/tGame"
            android:text="@string/game"
            style="@style/textPuzzleStyle"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/bNewGame"
            android:text="@string/newGame"
            style="@style/bMenuStyle"/>
        <Button
            android:id="@+id/bСontinue"
            android:text="@string/continueGame"
            style="@style/bMenuStyle"/>
        <Button
            android:id="@+id/bHelp"
            android:text="@string/Help"
            style="@style/bMenuStyle"/>
        <Button
            android:id="@+id/bExit"
            android:text="@string/exitGame"
            style="@style/bMenuStyle"/>
    </LinearLayout>
</RelativeLayout>