<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <ImageButton
            android:id="@+id/bAboutGame"
            style="@style/bSettingStyle"
            android:background="@drawable/about"
            android:contentDescription="@string/about_title"/>

        <ImageButton
            android:id="@+id/bSoundOffOn"
            style="@style/bSettingStyle"
            android:background="@android:color/transparent"
            android:contentDescription="@string/buttonSound"/>

        <ImageButton
            android:id="@+id/bNewGame"
            style="@style/bSettingStyle"
            android:background="@drawable/restart"
            android:contentDescription="@string/newGame"/>

        <ImageButton
            android:id="@+id/bBackMenu"
            style="@style/bSettingStyle"
            android:background="@drawable/back"
            android:contentDescription="@string/MainMenu"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tPyatnashki"
            android:text="@string/game24"
            style="@style/textPuzzleStyle"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tSScore"
                android:text="@string/Score"
                android:textSize="@dimen/textScore24"
                style="@style/textGameStyle24"/>

            <TextView
                android:id="@+id/tScore"
                android:textSize="@dimen/textScore24"
                style="@style/textGameStyle24"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/tBestSScore"
                android:text="@string/bestScore"
                android:textSize="@dimen/textBestScore24"
                style="@style/textGameStyle24"/>

            <TextView
                android:id="@+id/tBestScore"
                android:textSize="@dimen/textBestScore24"
                style="@style/textGameStyle24"/>
        </LinearLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="5"
            android:rowCount="5"
            android:background="?android:attr/selectableItemBackground">

            <ImageButton
                android:id="@+id/b2400"
                android:layout_row="0"
                android:layout_column="0"
                style="@style/gridBGameStyle24"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button"/>
            <ImageButton
                android:id="@+id/b2401"
                android:layout_row="0"
                android:layout_column="1"
                style="@style/gridBGameStyle24"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button"/>
            <ImageButton
                android:id="@+id/b2402"
                android:layout_row="0"
                android:layout_column="2"
                style="@style/gridBGameStyle24"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button"/>
            <ImageButton
                android:id="@+id/b2403"
                android:layout_row="0"
                android:layout_column="3"
                style="@style/gridBGameStyle24"
                android:layout_marginRight="@dimen/button_margin"
                android:contentDescription="@string/button"/>
            <ImageButton
                android:id="@+id/b2404"
                android:layout_row="0"
                android:layout_column="4"
                style="@style/gridBGameStyle24"
                android:contentDescription="@string/button"/>
            <ImageButton
                android:id="@+id/b2410"
                android:layout_row="1"
                android:layout_column="0"
                style="@style/gridBGameStyle24"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginTop="@dimen/button_margin"
                android:contentDescription="@string/button"/>
            <ImageButton
                android:id="@+id/b2411"
                android:layout_row="1"
                android:layout_column="1"
                style="@style/gridBGameStyle24"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginTop="@dimen/button_margin"
                android:contentDescription="@string/button"/>
            <ImageButton
                android:id="@+id/b2412"
                android:layout_row="1"
                android:layout_column="2"
                style="@style/gridBGameStyle24"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginTop="@dimen/button_margin"
                android:contentDescription="@string/button"/>
            <ImageButton
                android:id="@+id/b2413"
                android:layout_row="1"
                android:layout_column="3"
                style="@style/gridBGameStyle24"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginTop="@dimen/button_margin"
                android:contentDescription="@string/button"/>
            <ImageButton
                android:id="@+id/b2414"
                android:layout_row="1"
                android:layout_column="4"
                style="@style/gridBGameStyle24"
                android:layout_marginTop="@dimen/button_margin"
                android:contentDescription="@string/button"/>

            <ImageButton
                android:id="@+id/b2420"
                android:layout_row="2"
                android:layout_column="0"
                style="@style/gridBGameStyle24"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginTop="@dimen/button_margin"
                android:contentDescription="@string/button"/>
            <ImageButton
                android:id="@+id/b2421"
                android:layout_row="2"
                android:layout_column="1"
                style="@style/gridBGameStyle24"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginTop="@dimen/button_margin"
                android:contentDescription="@string/button"/>
            <ImageButton
                android:id="@+id/b2422"
                android:layout_row="2"
                android:layout_column="2"
                style="@style/gridBGameStyle24"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginTop="@dimen/button_margin"
                android:contentDescription="@string/button"/>
            <ImageButton
                android:id="@+id/b2423"
                android:layout_row="2"
                android:layout_column="3"
                style="@style/gridBGameStyle24"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginTop="@dimen/button_margin"
                android:contentDescription="@string/button"/>
            <ImageButton
                android:id="@+id/b2424"
                android:layout_row="2"
                android:layout_column="4"
                style="@style/gridBGameStyle24"
                android:layout_marginTop="@dimen/button_margin"
                android:contentDescription="@string/button"/>

            <ImageButton
                android:id="@+id/b2430"
                android:layout_row="3"
                android:layout_column="0"
                style="@style/gridBGameStyle24"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginTop="@dimen/button_margin"
                android:contentDescription="@string/button"/>
            <ImageButton
                android:id="@+id/b2431"
                android:layout_row="3"
                android:layout_column="1"
                style="@style/gridBGameStyle24"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginTop="@dimen/button_margin"
                android:contentDescription="@string/button"/>
            <ImageButton
                android:id="@+id/b2432"
                android:layout_row="3"
                android:layout_column="2"
                style="@style/gridBGameStyle24"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginTop="@dimen/button_margin"
                android:contentDescription="@string/button"/>
            <ImageButton
                android:id="@+id/b2433"
                android:layout_row="3"
                android:layout_column="3"
                style="@style/gridBGameStyle24"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginTop="@dimen/button_margin"
                android:contentDescription="@string/button"/>
            <ImageButton
                android:id="@+id/b2434"
                android:layout_row="3"
                android:layout_column="4"
                style="@style/gridBGameStyle24"
                android:layout_marginTop="@dimen/button_margin"
                android:contentDescription="@string/button"/>

            <ImageButton
                android:id="@+id/b2440"
                android:layout_row="4"
                android:layout_column="0"
                style="@style/gridBGameStyle24"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginTop="@dimen/button_margin"
                android:contentDescription="@string/button"/>
            <ImageButton
                android:id="@+id/b2441"
                android:layout_row="4"
                android:layout_column="1"
                style="@style/gridBGameStyle24"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginTop="@dimen/button_margin"
                android:contentDescription="@string/button"/>
            <ImageButton
                android:id="@+id/b2442"
                android:layout_row="4"
                android:layout_column="2"
                style="@style/gridBGameStyle24"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginTop="@dimen/button_margin"
                android:contentDescription="@string/button"/>
            <ImageButton
                android:id="@+id/b2443"
                android:layout_row="4"
                android:layout_column="3"
                style="@style/gridBGameStyle24"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginTop="@dimen/button_margin"
                android:contentDescription="@string/button"/>
            <ImageButton
                android:id="@+id/b2444"
                android:layout_row="4"
                android:layout_column="4"
                style="@style/gridBGameStyle24"
                android:layout_marginTop="@dimen/button_margin"
                android:contentDescription="@string/button"/>
        </GridLayout>

    </LinearLayout>
</RelativeLayout>