<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <ImageButton
            android:id="@+id/bAboutGame"
            android:background="@drawable/about"
            style="@style/bSettingStyle"
            android:contentDescription="@string/button"/>
        <ImageButton
            android:id="@+id/bSoundOffOn"
            android:background="@android:color/transparent"
            style="@style/bSettingStyle"
            android:contentDescription="@string/button"/>
        <ImageButton
            android:id="@+id/bNewGame"
            android:background="@drawable/restart"
            style="@style/bSettingStyle"
            android:contentDescription="@string/button"/>
        <ImageButton
            android:id="@+id/bBackMenu"
            android:background="@drawable/back"
            style="@style/bSettingStyle"
            android:contentDescription="@string/button"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tPyatnashki"
            android:text="@string/game15"
            style="@style/textPuzzleStyle"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tSScore"
                android:text="@string/Score"
                android:textSize="@dimen/textScore15"
                style="@style/textGameStyle15"/>
            <TextView
                android:id="@+id/tScore"
                android:textSize="@dimen/textScore15"
                style="@style/textGameStyle15"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp" >

            <TextView
                android:id="@+id/tBestSScore"
                android:text="@string/bestScore"
                android:textSize="@dimen/textBestScore15"
                style="@style/textGameStyle15" />
            <TextView
                android:id="@+id/tBestScore"
                android:textSize="@dimen/textBestScore15"
                style="@style/textGameStyle15" />
        </LinearLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="4"
            android:rowCount="4"
            android:background="?android:attr/selectableItemBackground">

        <ImageButton
            android:id="@+id/b1500"
            android:layout_row="0"
            android:layout_column="0"
            style="@style/gridBGameStyle15"
            android:layout_marginRight="@dimen/button_margin"
            android:contentDescription="@string/button"/>
        <ImageButton
            android:id="@+id/b1501"
            android:layout_row="0"
            android:layout_column="1"
            style="@style/gridBGameStyle15"
            android:layout_marginRight="@dimen/button_margin"
            android:contentDescription="@string/button" />
        <ImageButton
            android:id="@+id/b1502"
            android:layout_row="0"
            android:layout_column="2"
            style="@style/gridBGameStyle15"
            android:layout_marginRight="@dimen/button_margin"
            android:contentDescription="@string/button"/>
        <ImageButton
            android:id="@+id/b1503"
            android:layout_row="0"
            android:layout_column="3"
            style="@style/gridBGameStyle15"
            android:contentDescription="@string/button"/>

        <ImageButton
            android:id="@+id/b1510"
            android:layout_row="1"
            android:layout_column="0"
            style="@style/gridBGameStyle15"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:contentDescription="@string/button"/>
        <ImageButton
            android:id="@+id/b1511"
            android:layout_row="1"
            android:layout_column="1"
            style="@style/gridBGameStyle15"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:contentDescription="@string/button"/>
        <ImageButton
            android:id="@+id/b1512"
            android:layout_row="1"
            android:layout_column="2"
            style="@style/gridBGameStyle15"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:contentDescription="@string/button"/>
        <ImageButton
            android:id="@+id/b1513"
            android:layout_row="1"
            android:layout_column="3"
            style="@style/gridBGameStyle15"
            android:layout_marginTop="@dimen/button_margin"
            android:contentDescription="@string/button"/>

        <ImageButton
            android:id="@+id/b1520"
            android:layout_row="2"
            android:layout_column="0"
            style="@style/gridBGameStyle15"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:contentDescription="@string/button"/>
        <ImageButton
            android:id="@+id/b1521"
            android:layout_row="2"
            android:layout_column="1"
            style="@style/gridBGameStyle15"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:contentDescription="@string/button"/>
        <ImageButton
            android:id="@+id/b1522"
            android:layout_row="2"
            android:layout_column="2"
            style="@style/gridBGameStyle15"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:contentDescription="@string/button"/>
        <ImageButton
            android:id="@+id/b1523"
            android:layout_row="2"
            android:layout_column="3"
            style="@style/gridBGameStyle15"
            android:layout_marginTop="@dimen/button_margin"
            android:contentDescription="@string/button"/>

        <ImageButton
            android:id="@+id/b1530"
            android:layout_row="3"
            android:layout_column="0"
            style="@style/gridBGameStyle15"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:contentDescription="@string/button"/>
        <ImageButton
            android:id="@+id/b1531"
            android:layout_row="3"
            android:layout_column="1"
            style="@style/gridBGameStyle15"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:contentDescription="@string/button"/>
        <ImageButton
            android:id="@+id/b1532"
            android:layout_row="3"
            android:layout_column="2"
            style="@style/gridBGameStyle15"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:contentDescription="@string/button"/>
        <ImageButton
            android:id="@+id/b1533"
            android:layout_row="3"
            android:layout_column="3"
            style="@style/gridBGameStyle15"
            android:layout_marginTop="@dimen/button_margin"
            android:contentDescription="@string/button"/>
        </GridLayout>

    </LinearLayout>
</RelativeLayout>
